# youtube-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_speaker.py
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  exports.py  stats.py  summaries.py  transcripts.py  videos.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  export.py  summary.py  transcript.py  user.py  video.py
backend/app/schemas/: auth.py  export.py  video.py
backend/app/services/: app_settings.py  excel_export.py  google_sheets.py  storage.py  summarization.py  youtube.py
backend/app/services/transcription/: __init__.py  base.py  deepgram.py  factory.py  local_whisper.py  openai_whisper.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: check_db.py
backend/tests/: test_security.py  test_summarization.py  test_youtube.py
docs/: API.md  INSTALL.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(dashboard)/: page.tsx
frontend/components/: status-badge.tsx
frontend/hooks/: use-toast.tsx
frontend/lib/: api.ts  queries.ts  types.ts  utils.ts
tools/: diag-api.ps1  install-services.ps1  restart-services.ps1
(+21 files in other folders)
