[project]
name = "elets-transcript-backend"
version = "1.0.0"
description = "Automated YouTube transcript + AI summary pipeline for the elets channel"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends in defaults
